Added footer details

--- a/public/global.css
+++ b/public/global.css
@@ -80,4 +80,5 @@ button:focus {
   --background-color-dark: #bf846f;
   --action-btn-color: #bfbfbf;
   --item-background-color: #a6a6a6;
+  --main-background-color:gainsboro;
 }
